--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^1.4.6",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^1.8.10",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
