--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwind": "^4.0.0",
     "tailwindcss": "^1.8.10",
     "vue": "^2.6.11",
+    "vue-haptic": "^1.0.2",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
