--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.7.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^1.8.10",
+    "v-shared-element": "^2.1.0",
     "vue": "^2.6.11",
     "vue-haptic": "^1.0.2",
     "vue-router": "^3.1.6",
